y.output
State 127 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 164 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: CMDs

    2 CMDs: CMD CMDs
    3     | DECL_VAR ';' CMDs
    4     | DECL_FUN CMDs
    5     | /* empty */

    6 CMD: CMD_FOR
    7    | CMD_IF
    8    | CMD_WHILE
    9    | E_V ';'
   10    | '{' CMD CMDs '}'
   11    | '{' '}'
   12    | ';'
   13    | _RETURN ';'
   14    | _RETURN EE ';'

   15 CMD_IF: _IF '(' E ')' CMD _ELSE CMD
   16       | _IF '(' E ')' CMD

   17 CMD_FOR: _FOR '(' E_OPC ';' E_OPC ';' E_OPC ')' CMD
   18        | _FOR '(' DECL_VAR ';' E_OPC ';' E_OPC ')' CMD

   19 CMD_WHILE: _WHILE '(' E ')' CMD

   20 E_OPC: E_V
   21      | /* empty */

   22 DECL_VAR: _LET LVARs
   23         | _VAR VVARs
   24         | _CONST CTEs

   25 DECL_FUN: _FUNCTION _ID '(' ')' '{' NOVO_ESCOPO CMDs '}' DESTROI_ESCOPO
   26         | _FUNCTION _ID '(' NOVO_ESCOPO PARAMs ')' '{' CMDs '}' DESTROI_ESCOPO

   27 NOVO_ESCOPO: /* empty */

   28 DESTROI_ESCOPO: /* empty */

   29 PARAMs: PARAM ',' PARAMs
   30       | PARAM

   31 PARAM: _ID '=' EE
   32      | _ID

   33 LVARs: LVAR ',' LVARs
   34      | LVAR

   35 VVARs: VVAR ',' VVARs
   36      | VVAR

   37 LVAR: _ID '=' EE
   38     | _ID

   39 VVAR: _ID '=' EE
   40     | _ID

   41 CTEs: _ID '=' EE ',' CTEs
   42     | _ID '=' EE

   43 E_V: E ',' E_V
   44    | E

   45 EE: E
   46   | '{' '}'

   47 E: _ID '=' EE
   48  | _ID _INC_A EE
   49  | _ID _DEC_A EE
   50  | _ID _SETA EE
   51  | _ID _SETA '{' CMD CMDs '}'
   52  | EE _INC_UM
   53  | '(' _FPSETA EE
   54  | '(' PARAMs _FPSETA EE
   55  | F '.' _ID '=' EE
   56  | F '.' _ID _INC_A EE
   57  | F '[' EE ']' '=' EE
   58  | F '[' EE ']' '[' EE ']' '=' EE
   59  | F '.' _ID '[' EE ']' '=' EE
   60  | F '[' EE ']' _INC_A EE
   61  | F '.' _ID '[' EE ']' _INC_A EE
   62  | EE '<' EE
   63  | EE '*' EE
   64  | EE '+' EE
   65  | EE '-' EE
   66  | EE '/' EE
   67  | EE '>' EE
   68  | EE '%' EE
   69  | EE _IGUAL_A EE
   70  | F

   71 F: _ID
   72  | _NUM
   73  | _STRING
   74  | '(' EE ')'
   75  | F '(' ')'
   76  | F '[' EE ']'
   77  | F '[' EE ']' '[' EE ']'
   78  | F '(' ARGs ')'
   79  | '[' ']'
   80  | '[' ARGs ']'
   81  | '{' CAMPOs '}'
   82  | F '.' _ID
   83  | FUNC_ANON

   84 FUNC_ANON: _FUNCTION '(' ')' '{' CMDs '}'
   85          | _FUNCTION '(' PARAMs ')' '{' CMDs '}'

   86 CAMPOs: CAMPOs ',' CAMPOs
   87       | _ID ':' EE

   88 ARGs: EE ',' ARGs
   89     | EE


Terminals, with rules where they appear

$end (0) 0
'%' (37) 68
'(' (40) 15 16 17 18 19 25 26 53 54 74 75 78 84 85
')' (41) 15 16 17 18 19 25 26 74 75 78 84 85
'*' (42) 63
'+' (43) 64
',' (44) 29 33 35 41 43 86 88
'-' (45) 65
'.' (46) 55 56 59 61 82
'/' (47) 66
':' (58) 87
';' (59) 3 9 12 13 14 17 18
'<' (60) 62
'=' (61) 31 37 39 41 42 47 55 57 58 59
'>' (62) 67
'[' (91) 57 58 59 60 61 76 77 79 80
']' (93) 57 58 59 60 61 76 77 79 80
'{' (123) 10 11 25 26 46 51 81 84 85
'}' (125) 10 11 25 26 46 51 81 84 85
error (256)
_ID (258) 25 26 31 32 37 38 39 40 41 42 47 48 49 50 51 55 56 59 61
    71 82 87
_NUM (259) 72
_STRING (260) 73
_LET (261) 22
_VAR (262) 23
_CONST (263) 24
_FOR (264) 17 18
_FUNCTION (265) 25 26 84 85
_IF (266) 15 16
_ELSE (267) 15
_INC_UM (268) 52
_RETURN (269) 13 14
_SETA (270) 50 51
_FPSETA (271) 53 54
_INC_A (272) 48 56 60 61
_IGUAL_A (273) 69
_DEC_A (274) 49
_WHILE (275) 19


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
S (40)
    on left: 1, on right: 0
CMDs (41)
    on left: 2 3 4 5, on right: 1 2 3 4 10 25 26 51 84 85
CMD (42)
    on left: 6 7 8 9 10 11 12 13 14, on right: 2 10 15 16 17 18 19
    51
CMD_IF (43)
    on left: 15 16, on right: 7
CMD_FOR (44)
    on left: 17 18, on right: 6
CMD_WHILE (45)
    on left: 19, on right: 8
E_OPC (46)
    on left: 20 21, on right: 17 18
DECL_VAR (47)
    on left: 22 23 24, on right: 3 18
DECL_FUN (48)
    on left: 25 26, on right: 4
NOVO_ESCOPO (49)
    on left: 27, on right: 25 26
DESTROI_ESCOPO (50)
    on left: 28, on right: 25 26
PARAMs (51)
    on left: 29 30, on right: 26 29 54 85
PARAM (52)
    on left: 31 32, on right: 29 30
LVARs (53)
    on left: 33 34, on right: 22 33
VVARs (54)
    on left: 35 36, on right: 23 35
LVAR (55)
    on left: 37 38, on right: 33 34
VVAR (56)
    on left: 39 40, on right: 35 36
CTEs (57)
    on left: 41 42, on right: 24 41
E_V (58)
    on left: 43 44, on right: 9 20 43
EE (59)
    on left: 45 46, on right: 14 31 37 39 41 42 47 48 49 50 52 53 54
    55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 74 76 77 87 88 89
E (60)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67 68 69 70, on right: 15 16 19 43 44 45
F (61)
    on left: 71 72 73 74 75 76 77 78 79 80 81 82 83,
    on right: 55 56 57 58 59 60 61 70 75 76 77 78 82
FUNC_ANON (62)
    on left: 84 85, on right: 83
CAMPOs (63)
    on left: 86 87, on right: 81 86
ARGs (64)
    on left: 88 89, on right: 78 80 88


state 0

    0 $accept: . S $end

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _LET       shift, and go to state 4
    _VAR       shift, and go to state 5
    _CONST     shift, and go to state 6
    _FOR       shift, and go to state 7
    _FUNCTION  shift, and go to state 8
    _IF        shift, and go to state 9
    _RETURN    shift, and go to state 10
    _WHILE     shift, and go to state 11
    '['        shift, and go to state 12
    '('        shift, and go to state 13
    ';'        shift, and go to state 14
    '{'        shift, and go to state 15

    $default  reduce using rule 5 (CMDs)

    S          go to state 16
    CMDs       go to state 17
    CMD        go to state 18
    CMD_IF     go to state 19
    CMD_FOR    go to state 20
    CMD_WHILE  go to state 21
    DECL_VAR   go to state 22
    DECL_FUN   go to state 23
    E_V        go to state 24
    EE         go to state 25
    E          go to state 26
    F          go to state 27
    FUNC_ANON  go to state 28


state 1

   47 E: _ID . '=' EE
   48  | _ID . _INC_A EE
   49  | _ID . _DEC_A EE
   50  | _ID . _SETA EE
   51  | _ID . _SETA '{' CMD CMDs '}'
   71 F: _ID .

    _SETA   shift, and go to state 29
    _INC_A  shift, and go to state 30
    _DEC_A  shift, and go to state 31
    '='     shift, and go to state 32

    $default  reduce using rule 71 (F)


state 2

   72 F: _NUM .

    $default  reduce using rule 72 (F)


state 3

   73 F: _STRING .

    $default  reduce using rule 73 (F)


state 4

   22 DECL_VAR: _LET . LVARs

    _ID  shift, and go to state 33

    LVARs  go to state 34
    LVAR   go to state 35


state 5

   23 DECL_VAR: _VAR . VVARs

    _ID  shift, and go to state 36

    VVARs  go to state 37
    VVAR   go to state 38


state 6

   24 DECL_VAR: _CONST . CTEs

    _ID  shift, and go to state 39

    CTEs  go to state 40


state 7

   17 CMD_FOR: _FOR . '(' E_OPC ';' E_OPC ';' E_OPC ')' CMD
   18        | _FOR . '(' DECL_VAR ';' E_OPC ';' E_OPC ')' CMD

    '('  shift, and go to state 41


state 8

   25 DECL_FUN: _FUNCTION . _ID '(' ')' '{' NOVO_ESCOPO CMDs '}' DESTROI_ESCOPO
   26         | _FUNCTION . _ID '(' NOVO_ESCOPO PARAMs ')' '{' CMDs '}' DESTROI_ESCOPO
   84 FUNC_ANON: _FUNCTION . '(' ')' '{' CMDs '}'
   85          | _FUNCTION . '(' PARAMs ')' '{' CMDs '}'

    _ID  shift, and go to state 42
    '('  shift, and go to state 43


state 9

   15 CMD_IF: _IF . '(' E ')' CMD _ELSE CMD
   16       | _IF . '(' E ')' CMD

    '('  shift, and go to state 44


state 10

   13 CMD: _RETURN . ';'
   14    | _RETURN . EE ';'

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 45
    '['        shift, and go to state 12
    '('        shift, and go to state 13
    ';'        shift, and go to state 46
    '{'        shift, and go to state 47

    EE         go to state 48
    E          go to state 49
    F          go to state 27
    FUNC_ANON  go to state 28


state 11

   19 CMD_WHILE: _WHILE . '(' E ')' CMD

    '('  shift, and go to state 50


state 12

   79 F: '[' . ']'
   80  | '[' . ARGs ']'

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 45
    '['        shift, and go to state 12
    '('        shift, and go to state 13
    '{'        shift, and go to state 47
    ']'        shift, and go to state 51

    EE         go to state 52
    E          go to state 49
    F          go to state 27
    FUNC_ANON  go to state 28
    ARGs       go to state 53


state 13

   53 E: '(' . _FPSETA EE
   54  | '(' . PARAMs _FPSETA EE
   74 F: '(' . EE ')'

    _ID        shift, and go to state 54
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 45
    _FPSETA    shift, and go to state 55
    '['        shift, and go to state 12
    '('        shift, and go to state 13
    '{'        shift, and go to state 47

    PARAMs     go to state 56
    PARAM      go to state 57
    EE         go to state 58
    E          go to state 49
    F          go to state 27
    FUNC_ANON  go to state 28


state 14

   12 CMD: ';' .

    $default  reduce using rule 12 (CMD)


state 15

   10 CMD: '{' . CMD CMDs '}'
   11    | '{' . '}'
   46 EE: '{' . '}'
   81 F: '{' . CAMPOs '}'

    _ID        shift, and go to state 59
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FOR       shift, and go to state 7
    _FUNCTION  shift, and go to state 45
    _IF        shift, and go to state 9
    _RETURN    shift, and go to state 10
    _WHILE     shift, and go to state 11
    '['        shift, and go to state 12
    '('        shift, and go to state 13
    ';'        shift, and go to state 14
    '{'        shift, and go to state 15
    '}'        shift, and go to state 60

    CMD        go to state 61
    CMD_IF     go to state 19
    CMD_FOR    go to state 20
    CMD_WHILE  go to state 21
    E_V        go to state 24
    EE         go to state 25
    E          go to state 26
    F          go to state 27
    FUNC_ANON  go to state 28
    CAMPOs     go to state 62


state 16

    0 $accept: S . $end

    $end  shift, and go to state 63


state 17

    1 S: CMDs .

    $default  reduce using rule 1 (S)


state 18

    2 CMDs: CMD . CMDs

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _LET       shift, and go to state 4
    _VAR       shift, and go to state 5
    _CONST     shift, and go to state 6
    _FOR       shift, and go to state 7
    _FUNCTION  shift, and go to state 8
    _IF        shift, and go to state 9
    _RETURN    shift, and go to state 10
    _WHILE     shift, and go to state 11
    '['        shift, and go to state 12
    '('        shift, and go to state 13
    ';'        shift, and go to state 14
    '{'        shift, and go to state 15

    $default  reduce using rule 5 (CMDs)

    CMDs       go to state 64
    CMD        go to state 18
    CMD_IF     go to state 19
    CMD_FOR    go to state 20
    CMD_WHILE  go to state 21
    DECL_VAR   go to state 22
    DECL_FUN   go to state 23
    E_V        go to state 24
    EE         go to state 25
    E          go to state 26
    F          go to state 27
    FUNC_ANON  go to state 28


state 19

    7 CMD: CMD_IF .

    $default  reduce using rule 7 (CMD)


state 20

    6 CMD: CMD_FOR .

    $default  reduce using rule 6 (CMD)


state 21

    8 CMD: CMD_WHILE .

    $default  reduce using rule 8 (CMD)


state 22

    3 CMDs: DECL_VAR . ';' CMDs

    ';'  shift, and go to state 65


state 23

    4 CMDs: DECL_FUN . CMDs

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _LET       shift, and go to state 4
    _VAR       shift, and go to state 5
    _CONST     shift, and go to state 6
    _FOR       shift, and go to state 7
    _FUNCTION  shift, and go to state 8
    _IF        shift, and go to state 9
    _RETURN    shift, and go to state 10
    _WHILE     shift, and go to state 11
    '['        shift, and go to state 12
    '('        shift, and go to state 13
    ';'        shift, and go to state 14
    '{'        shift, and go to state 15

    $default  reduce using rule 5 (CMDs)

    CMDs       go to state 66
    CMD        go to state 18
    CMD_IF     go to state 19
    CMD_FOR    go to state 20
    CMD_WHILE  go to state 21
    DECL_VAR   go to state 22
    DECL_FUN   go to state 23
    E_V        go to state 24
    EE         go to state 25
    E          go to state 26
    F          go to state 27
    FUNC_ANON  go to state 28


state 24

    9 CMD: E_V . ';'

    ';'  shift, and go to state 67


state 25

   52 E: EE . _INC_UM
   62  | EE . '<' EE
   63  | EE . '*' EE
   64  | EE . '+' EE
   65  | EE . '-' EE
   66  | EE . '/' EE
   67  | EE . '>' EE
   68  | EE . '%' EE
   69  | EE . _IGUAL_A EE

    _INC_UM   shift, and go to state 68
    _IGUAL_A  shift, and go to state 69
    '<'       shift, and go to state 70
    '>'       shift, and go to state 71
    '+'       shift, and go to state 72
    '-'       shift, and go to state 73
    '*'       shift, and go to state 74
    '/'       shift, and go to state 75
    '%'       shift, and go to state 76


state 26

   43 E_V: E . ',' E_V
   44    | E .
   45 EE: E .

    ','  shift, and go to state 77

    ';'       reduce using rule 44 (E_V)
    ')'       reduce using rule 44 (E_V)
    $default  reduce using rule 45 (EE)


state 27

   55 E: F . '.' _ID '=' EE
   56  | F . '.' _ID _INC_A EE
   57  | F . '[' EE ']' '=' EE
   58  | F . '[' EE ']' '[' EE ']' '=' EE
   59  | F . '.' _ID '[' EE ']' '=' EE
   60  | F . '[' EE ']' _INC_A EE
   61  | F . '.' _ID '[' EE ']' _INC_A EE
   70  | F .
   75 F: F . '(' ')'
   76  | F . '[' EE ']'
   77  | F . '[' EE ']' '[' EE ']'
   78  | F . '(' ARGs ')'
   82  | F . '.' _ID

    '['  shift, and go to state 78
    '('  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 70 (E)


state 28

   83 F: FUNC_ANON .

    $default  reduce using rule 83 (F)


state 29

   50 E: _ID _SETA . EE
   51  | _ID _SETA . '{' CMD CMDs '}'

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 45
    '['        shift, and go to state 12
    '('        shift, and go to state 13
    '{'        shift, and go to state 81

    EE         go to state 82
    E          go to state 49
    F          go to state 27
    FUNC_ANON  go to state 28


state 30

   48 E: _ID _INC_A . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 45
    '['        shift, and go to state 12
    '('        shift, and go to state 13
    '{'        shift, and go to state 47

    EE         go to state 83
    E          go to state 49
    F          go to state 27
    FUNC_ANON  go to state 28


state 31

   49 E: _ID _DEC_A . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 45
    '['        shift, and go to state 12
    '('        shift, and go to state 13
    '{'        shift, and go to state 47

    EE         go to state 84
    E          go to state 49
    F          go to state 27
    FUNC_ANON  go to state 28


state 32

   47 E: _ID '=' . EE

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 45
    '['        shift, and go to state 12
    '('        shift, and go to state 13
    '{'        shift, and go to state 47

    EE         go to state 85
    E          go to state 49
    F          go to state 27
    FUNC_ANON  go to state 28


state 33

   37 LVAR: _ID . '=' EE
   38     | _ID .

    '='  shift, and go to state 86

    $default  reduce using rule 38 (LVAR)


state 34

   22 DECL_VAR: _LET LVARs .

    $default  reduce using rule 22 (DECL_VAR)


state 35

   33 LVARs: LVAR . ',' LVARs
   34      | LVAR .

    ','  shift, and go to state 87

    $default  reduce using rule 34 (LVARs)


state 36

   39 VVAR: _ID . '=' EE
   40     | _ID .

    '='  shift, and go to state 88

    $default  reduce using rule 40 (VVAR)


state 37

   23 DECL_VAR: _VAR VVARs .

    $default  reduce using rule 23 (DECL_VAR)


state 38

   35 VVARs: VVAR . ',' VVARs
   36      | VVAR .

    ','  shift, and go to state 89

    $default  reduce using rule 36 (VVARs)


state 39

   41 CTEs: _ID . '=' EE ',' CTEs
   42     | _ID . '=' EE

    '='  shift, and go to state 90


state 40

   24 DECL_VAR: _CONST CTEs .

    $default  reduce using rule 24 (DECL_VAR)


state 41

   17 CMD_FOR: _FOR '(' . E_OPC ';' E_OPC ';' E_OPC ')' CMD
   18        | _FOR '(' . DECL_VAR ';' E_OPC ';' E_OPC ')' CMD
